--- a/source/catalog.html
+++ b/source/catalog.html
@@ -304,7 +304,7 @@
       <form action="https://echo.htmlacademy.ru">
 
         <section class="filter-companions__section filter-by-hobby">
-          <input type="checkbox" name="" id="fake-button--hobby" class="fake-button fake-button--hobby">
+          <input type="checkbox" name="" id="fake-button--hobby" class="filter-companions__fake-button filter-companions__fake-button--hobby visually-hidden">
           <label for="fake-button--hobby" class="filter-companions__subheading">Хобби</label>
           <fieldset>
             <legend aria-labelledby="filter-companions__by-hobby" class="visually-hidden"></legend>
