--- a/source/form.html
+++ b/source/form.html
@@ -52,7 +52,7 @@
       <h2 class="new-schedule__heading">Добавить план:</h2>
       <section class="new-schedule__step step step-dates">
         <h3 class="step__heading">Шаг 1. Даты пребывания</h3>
-        <form action="https://echo.htmlacademy.ru">
+        <form action="https://echo.htmlacademy.ru" class="step__form">
           <p class="step__description">
             Укажите предпочтительное количество попутчиков, которых
             вы хотели бы позвать в поездку и ее предполагаемую длительность.
