--- a/source/form.html
+++ b/source/form.html
@@ -111,7 +111,7 @@
           </div>
 
           <div class="country-select country-select--empty">
-            <button type="button" class="country-select__text country-select__chose-trigger country-select__dropdown">
+            <button type="button" class="country-select__text country-select__chose-trigger country-select__dropdown" aria-haspopup="true" aria-expanded="false">
               Выбрать страну
             </button>
             <div class="country-select__popup country-popup">
@@ -147,19 +147,19 @@
                 <a href="#" class="country-popup__letter">Ю</a>
                 <a href="#" class="country-popup__letter">Я</a>
               </div>
-              <p class="country-popup__list">
-                Австралия<br>
-                Австрия<br>
-                Азербайджан<br>
-                Албания<br>
-                Алжир<br>
-                Ангола<br>
-                Андорра<br>
-                Антигуа и Барбуда<br>
-                Аргентина<br>
-                Армения<br>
-                Афганистан
-              </p>
+              <ul class="country-popup__list">
+                <li class="country-popup__country-element"><a href="#" class="country-popup__country-link">Австралия</a></li>
+                <li class="country-popup__country-element"><a href="#" class="country-popup__country-link">Австрия</a></li>
+                <li class="country-popup__country-element"><a href="#" class="country-popup__country-link">Азербайджан</a></li>
+                <li class="country-popup__country-element"><a href="#" class="country-popup__country-link">Албания</a></li>
+                <li class="country-popup__country-element"><a href="#" class="country-popup__country-link">Алжир</a></li>
+                <li class="country-popup__country-element"><a href="#" class="country-popup__country-link">Ангола</a></li>
+                <li class="country-popup__country-element"><a href="#" class="country-popup__country-link">Андорра</a></li>
+                <li class="country-popup__country-element"><a href="#" class="country-popup__country-link">Антигуа и Барбуда</a></li>
+                <li class="country-popup__country-element"><a href="#" class="country-popup__country-link">Аргентина</a></li>
+                <li class="country-popup__country-element"><a href="#" class="country-popup__country-link">Армения</a></li>
+                <li class="country-popup__country-element"><a href="#" class="country-popup__country-link">Афганистан</a></li>
+              </ul>
             </div>
           </div>
 
